# ser-conformer-gat-xai

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  TO_CHECK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  train.yml
audio/: audio_embeddings.pkl  audio_emd.py
configs/: base.yaml  iemocap.yaml  meld.yaml  roberta_finetune.yaml  text_branch.yaml
docs/: DEVELOPER_GUIDE.md  PAPER_PREP_GUIDE.md  RESEARCH_PROTOCOL.md  model_card.md
examples/: run_build_manifest.py  run_gat_text.py  run_text_encoder.py
notebooks/: kaggle_fusion_training.ipynb  roberta_kaggle.ipynb  slx02-fusion-training.ipynb  slx02-roberta-finetune.ipynb  testing.ipynb
scripts/: evaluate_text.py  finetune_roberta.py  finetune_text.py  finetune_text_v2.py  label_check.py
src/cli/: evaluate.py  export_artifacts.py  train.py
src/serxai/: __init__.py
src/serxai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/serxai/data/: collators.py  datamodule.py  graph_builder.py  iemocap_dataset.py  labels.py  preprocess_audio.py  preprocess_text.py
src/serxai/models/: classifier.py  conformer.py  gat_fusion.py  gat_text.py  multimodal.py  text_encoder.py  text_head.py  tokenizer_encoder.py
src/serxai/utils/: metrics.py  seed.py  train_utils.py
src/serxai/visuals/: fig_utils.py
src/serxai/xai/: attention_viz.py  exporters.py  shap_tools.py
tests/: test_preprocess_text.py  test_text_encoder.py
